more on documentation

--- a/README
+++ b/README
@@ -1,11 +1,24 @@
 Open Eclipse Preferences
+DESCRIPTION
+
+Provides basic Eclipse editor templates to generate quickly tests with TestNG.
+At the moment the following templates are available:
+- test
+- testEx (creates a test expecting an exception)
+- BeforeClass
+- BeforeMethod
+
+
+HOW TO INSTALL
+
 Go to Java -> Editor -> Tempates
 Click on Import and select Eclipse_TestNG_templates.xml
 Templates now should be imported
 Click on Ok to close the Preferences window
 
-https://github.com/ed0t/testng-templates4Eclipse/blob/master/raw/img/eclipse-preferences.png
+https://github.com/ed0t/testng-templates4Eclipse/raw/master/img/eclipse-preferences.png
 
 Create a new TestNG class
 type "test" CTRL-SPACE two times and you should be able to select the template "Test - test method (TestNG)"
 
+https://github.com/ed0t/testng-templates4Eclipse/raw/master/img/test-template.png
