--- a/README
+++ b/README
@@ -15,7 +15,8 @@ Go to Java -> Editor -> Tempates
 Click on Import and select Eclipse_TestNG_templates.xml
 Templates now should be imported
 Click on Ok to close the Preferences window
-
+http://i.minus.com/iekRPuKipNB2.png
+![Eclipse preferences](http://i.minus.com/iekRPuKipNB2.png)
 ![Eclipse preferences](http://github.com/ed0t/testng-templates4Eclipse/raw/master/img/eclipse-preferences.png)
 
 Create a new TestNG class
